<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Unity</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="mass">Mass</string>
    <string name="length">Length</string>
    <string name="volume">Volume</string>
    <string name="Convert">Convert</string>
    <string name="home">Home</string>
    <string name="velocity">Velocity</string>
    <string name="area">Area</string>
    <string name="unitConversion">Unit Conversion</string>
    <string name="temperature">Temperature</string>
    <string name="toConvert">Value to convert :</string>
    <string name="convertedValue">Converted Value :</string>
    <string name="areaConversion">Area Conversion</string>
    <string name="lengthConversion">Length Conversion</string>
    <string name="massConversion">Mass Conversion</string>
    <string name="tempConversion">Temperature Conversion</string>
    <string name="velocityConversion">Velocity Conversion</string>
    <string name="volumeConversion">Volume Conversion</string>
    
   
    
    

</resources>